results/SpecGenBench/4-shot/log-DominantIndex-2023_11_05_01_09_33.txt
class DominantIndex {
    
    //@ requires nums != null && nums.length > 0;
    //@ ensures \result >= -1 && \result < nums.length;
    //@ ensures \result == -1 <==> (\forall int i; 0 <= i && i < nums.length; nums[i] * 2 <= nums[\result]);
    //@ ensures \result >= 0 ==> nums[\result] >= nums[i] * 2;
    public int dominantIndex(int[] nums) {
        int m1 = -1, m2 = -1;
        int index = -1;

        //@ maintaining 0 <= i && i <= nums.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; nums[k] * 2 <= m1);
        //@ maintaining (\forall int k; 0 <= k && k < i; nums[k] * 2 <= m2);
        //@ decreases nums.length - i;
        for (int i = 0; i < nums.length; i++) {
            if (nums[i] > m1) {
                m2 = m1;
                m1 = nums[i];
                index = i;
            } else if (nums[i] > m2) {
                m2 = nums[i];
            }
        }

        return m1 >= m2 * 2 ? index : -1;
    }
}
/home/max/Documents/JMLGPT/tmp/DominantIndex.java:6: error: cannot find symbol
    //@ ensures \result >= 0 ==> nums[\result] >= nums[i] * 2;
                                                       ^
  symbol:   variable i
  location: class DominantIndex
1 error

